# self-host-social

./: .gitignore  Cargo.toml  README.md  Rocket.toml
backend/src/: main.rs
svelte-app/: package-lock.json  package.json  rollup.config.js
svelte-app/public/: index.html
svelte-app/src/: App.svelte  Index.svelte  Login.svelte  NewPost.svelte  Post.svelte  Search.svelte  Signup.svelte  UserProfile.svelte  stores.js  utils.js
