[package]
name = "backend"
version = "0.1.0"
authors = ["Jarek Samic <cldfire3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[dependencies]
chrono = "0.4"
rusqlite = { version = "0.20.0", features = ["chrono"] }
