[package]
name = "backend"
version = "0.1.0"
authors = ["Cldfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[dependencies]
argonautica = "0.2.0"
identicon-rs = "1.4"
chrono = "0.4"
image = "0.22"
serde = "1.0"
serde_json = "1.0"
rocket = "0.4"
rocket_contrib = "0.4"
serde_derive = "1.0"
rusqlite = { version = "0.20.0", features = ["chrono"] }
